--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: "https://moonslog.com/"
+baseURL: "https://moonywrites.com/"
 languageCode: "en-us"
 title: "Moon Blogs"
 theme: "papermod"
@@ -8,3 +8,6 @@ menu:
     - identifier: "tags"
       name: "Tags"
       url: "/tags/"
+
+params:
+  description: "Blog about technology, programming, productivity, philosophy, and life."
