--- a/hugo.yml
+++ b/hugo.yml
@@ -1,6 +1,6 @@
 baseURL: "https://moonywrites.com/"
 languageCode: "en-us"
-title: "Moony Writes"
+title: "ʕ◔ϖ◔ʔ Moons Blog"
 theme: "papermod"
 
 menu:
