--- a/hugo.yml
+++ b/hugo.yml
@@ -17,6 +17,10 @@ menu:
       name: "TIL"
       url: "/til/"
       weight: 2
+    - identifier: "goals"
+      name: "Goals"
+      url: "/goals/"
+      weight: 4
 
 
 params:
