Add habit morning-stretches

--- a/data/habits/2026.yaml
+++ b/data/habits/2026.yaml
@@ -1,35 +1,3 @@
-meditation:
-  - "2026-01-01"
-  - "2026-01-02"
-  - "2026-01-05"
-  - "2026-01-06"
-  - "2026-01-07"
-  - "2026-01-08"
-  - "2026-01-12"
-  - "2026-01-13"
-  - "2026-01-14"
-  - "2026-01-15"
-  - "2026-01-19"
-  - "2026-01-20"
-  - "2026-01-21"
-
-journaling:
-  - "2026-01-01"
-  - "2026-01-03"
-  - "2026-01-05"
-  - "2026-01-07"
-  - "2026-01-10"
-  - "2026-01-12"
-  - "2026-01-14"
-  - "2026-01-17"
-  - "2026-01-19"
-  - "2026-01-21"
-
-writing:
-  - "2026-01-02"
-  - "2026-01-09"
-  - "2026-01-16"
-
 exercise:
   - "2026-01-01"
   - "2026-01-03"
@@ -46,6 +14,34 @@ exercise:
   - "2026-01-22"
   - "2026-01-30"
 
+journaling:
+  - "2026-01-01"
+  - "2026-01-03"
+  - "2026-01-05"
+  - "2026-01-07"
+  - "2026-01-10"
+  - "2026-01-12"
+  - "2026-01-14"
+  - "2026-01-17"
+  - "2026-01-19"
+  - "2026-01-21"
+
+meditation:
+  - "2026-01-01"
+  - "2026-01-02"
+  - "2026-01-05"
+  - "2026-01-06"
+  - "2026-01-07"
+  - "2026-01-08"
+  - "2026-01-12"
+  - "2026-01-13"
+  - "2026-01-14"
+  - "2026-01-15"
+  - "2026-01-19"
+  - "2026-01-20"
+  - "2026-01-21"
+
+morning-stretches:
 reading:
   - "2026-01-01"
   - "2026-01-02"
@@ -71,3 +67,9 @@ reading:
   - "2026-01-22"
   - "2026-01-30"
   - "2026-01-31"
+
+writing:
+  - "2026-01-02"
+  - "2026-01-09"
+  - "2026-01-16"
+
