--- a/.github/workflows/hugo_infra.yaml
+++ b/.github/workflows/hugo_infra.yaml
@@ -17,6 +17,28 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  deploy-worker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+      - name: Check for telegram-bot changes
+        id: changes
+        run: |
+          if git diff --name-only HEAD~1 HEAD | grep -q '^telegram-bot/'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Deploy Worker
+        if: steps.changes.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          workingDirectory: telegram-bot
+
   build:
     runs-on: ubuntu-latest
     env:
