--- a/.github/workflows/hugo_infra.yaml
+++ b/.github/workflows/hugo_infra.yaml
@@ -37,6 +37,7 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           workingDirectory: telegram-bot
 
   build:
